src/App.css
body {
  background-color: #ECECEC;
  word-wrap: break-word;
}

.navbar {
  padding: 0 0px;
  max-height: 60px;
  line-height: 30px;
}

.nav-link:hover {
  color:white !important;
}
.nav-link {    
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color:black;
  padding:8px 5px;
  transition:0.2s !important; 
}


.navbar-toggler {
  max-width:55px;
  margin-left: auto;
  margin-right: 20px;
  background-color: #ECECEC;
  overflow: auto;
  position: absolute;
  right: 5px;
}

.navbar-toggler:hover {
  background-color: #CDCDCD;
  box-shadow: 0 3px 6px 0 grey, 0 0px 0px 0 #CDCDCD;
}

@media screen and (max-width: 1000px) {
.navbar-collapse {
  padding-left: 20px;
  text-align: left;
  background-color: #FFD762;
  box-shadow: 0 3px 6px 0 grey, 0 3px 2px 0 #CDCDCD;
}
}

.nav-item:not(.nav-icon)::after {
  content:'';display:block;width:0px;height:3px;background:#4D60A5;transition: 0.2s;
}

.nav-item:not(.nav-icon):hover::after {
  width:100%;
}

.pass {
  height: 25px;
  font-size: 12px;
  font-weight: bold;
  padding-top: 5px;
}

.passForm {
  font-size: 14px !important;
  padding-left: 8px;
  height: 30px !important;
}

.pass:hover {
  background-color: #EFEFEF !important;
  color: grey !important;
}

.sub-text {
  color: rgb(129, 129, 129);
  font-size: 12px;
  white-space: nowrap;
}

.sub-link {
  color: rgb(129, 129, 129);
  font-size: 12px;
}

.muted-text {
  color: rgb(129, 129, 129);
}

.sub-link:hover {
  color:black;
  text-decoration: none;
}

.icon:hover {
  opacity:50%;
}

.bg-yellow {
  background-color: #F7D369;
  box-shadow: 0 0px 6px 0 grey, 0 0px 10px 0 #CDCDCD;
}

.bg-black {
  background-color: black;
  box-shadow: 0 0px 6px 0 grey, 0 0px 10px 0 #CDCDCD;
}

.btn-orange {
  background-color: #FC5D42;
  color: white;
  border-radius: 50px;
  box-shadow: 0 0px 1px 0 grey, 0 2px 2px 0 grey;
  margin-left: auto;
  white-space: nowrap;
}


.rounded-edge {
  border-radius: 120px;
  height: 55px;
  padding-bottom: 20px;
}

.btn-orange:hover {
  background-color: orange;
  color: white;
}

.navbar-brand {
  position: relative;
}


.card-header {
  background-color: #4D60A5;
  color: white;
}

.btn-category {
  color:black !important;
}

.btn-category:hover {
  color:black;
  text-decoration:none;
}

.btn-category:visited {
  color:black;
}


@media screen and (min-width: 600px) {
.has-search .form-control {
  padding-left: 2.375rem;
  width: 400px;
}
}

.has-search .form-control-feedback {
  position: absolute;
  z-index: 2;
  display: block;
  width: 2.375rem;
  height: 2.375rem;
  line-height: 2.375rem;
  text-align: center;
  pointer-events: none;
  color: #aaa;
}

.profile-picture {
  margin-top: 100px;
}

.profile-content {
  margin-top: 120px;
  margin-left: 0px;
}

@media screen and (max-width: 1000px) {
  .profile-picture {
    margin-left: 100px;
    margin-right: 100px;
  }

  .profile-content {
    margin-left: 100px;
    margin-right: 100px;
    margin-top: 10px;
  }

  .name {
    margin-left: 10px;
    margin-right: 10px;
  }
}

.questionButton {
  border: none;
  background-color: white;
  font-family: "Arial Black", Gadget, sans-serif;
  padding: 0px;
  height: 30px;
  border-bottom: 5px solid #FC5D42;
}


.listku {
  color: black;
}

.listku:hover {
  font-weight: bold;
  color: black;
  text-decoration: none;
}

.underline-link {
  text-decoration: underline;
  /* color: darkred; */
}

.unanswered:hover {
  text-decoration: underline;
}

a:visited .unanswered{
  color: black;
}

.refresh-button {
  color: #4D60A5;
}

li {
  display: inline;
}


.large-space {
  line-height: 300%;
}

.img-fluid {
  max-height: 50px;
}

.dropdown-menu {
  padding: 0px;
  width: 200px;
}

.dropdown-item {
  white-space: normal;
  font-size: 15px;
  padding-left: 20px;
  /* border: 0.5px solid #d4d4d4; */
}

.content-dropdown:hover {
  background-color: #EFEFEF;
}

.margin-top {
  margin-top: 60px;
}

.margin-top-none {
  margin-top: -30px;
}

.bottom-right {
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.bottom-right-fixed {
  position: fixed;
  bottom: 40px;
  right: 30px;
}

.container-sign-in {
  width: 100%;
  height: 100%;
}

.left-half {
  position: fixed;
  left: 0px;
  width: 50%;
  height: 100%;
}

@media screen and (min-width: 1200px) {
.right-half {
  /* position: ; */
  right: 0px;
  margin-left: auto;
  width: 50%;
  height: 100%;
  overflow: auto;
}
}


.logo-fluid {
  max-width:90%;
  overflow: auto;
  position: absolute;
  top: 30%;
}

@media screen and (max-width: 1200px) {
  .btn-navbar {
    margin-top: 15px;
    margin-bottom: 10px;
    white-space: nowrap;
  }

  .btn-outline-dark {
    margin-top: 25px;
    margin-bottom: 25px;
    margin-left: 30px;
  }

 
}

.link-register {
  color:black;
}

.link-register:hover {
  color: white;
  text-decoration: none;
}

.link-navbar {
  color: black;
}

.link-navbar:hover {
  color: #4D60A5;
  text-decoration: none;
}

.sign-in-btn {
  padding: 10px;
  padding-left: 40px;
  padding-right: 40px;
  color: #FC5D42;
  font-weight: bold;
}


.sign-in-btn:hover {
  padding: 10px;
  padding-left: 40px;
  padding-right: 40px;
  background-color: #F7D369;
}

.sign-in-link {
  color:#FC5D42;
  font-weight: bold;
}

.sign-in-link:hover {
  color:black;
  font-weight: bold;
  text-decoration: none;
}

@media screen and (min-width: 1200px) {
.container-sign-in-btn {
  overflow: auto;
  left: 58%;
  position: absolute;
  padding: 20px;
}
}

@media screen and (max-width: 1200px) {
  .container-sign-in-btn {
    overflow: auto;
    text-align: center;
  }
}

/* .nav-tabs {
  border-bottom: none;
}

.nav-tabs:hover {
  border-bottom: 3px solid #4D60A5;
} */

.far-right {
  right: 0;
  margin-left: auto;
}

.btn-opacity {
  color:black;
  background-color: rgb(216, 214, 214);
}

.btn-back-home {
  color: black;
  /* opacity: 70%; */
  padding-right: 10px;
}

.btn-back-home:hover {
  text-decoration: none;
  font-weight: bold;
  color: #FC5D42;
}

.btn-logout {
  background-color: black;
  padding-right: 10px;
  width: 200px;
  margin-top: 20px;
  position:relative;
}

.btn-logout:hover {
  background-color: white;
}

.link-logout {
  color: #FC5D42;
  font-weight: bold;
}

.link-logout:hover {
  color: #FC5D42;
  text-decoration: none;
}

.orange-color {
  background-color: #FC5D42 !important;
}

.tab-link {
  font-weight: bold;
  padding-left: 15px;
  padding-right: 15px;
}

.tab-link:hover {
  color: black !important;
}

.whiteSpace {
  white-space: pre-wrap;
}

input[type="search"]::-webkit-search-cancel-button {
  cursor:pointer;
  height: 20px;
  width: 20px;
}

.textRevealContainer {
  position: absolute;
  left: 48%;
  top: 53%;
  transform: translate(-50%, -50%);
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 1.5em; /*adjust according to your need*/
  text-align: center; /*in case you write multiline text*/
}

.textReveal {
  overflow: hidden;
  animation: textRevealAnim 2s ease 0.5s forwards;
}

.textReveal > div {
  padding: 8px 16px;
  transform: translateX(100%);
  border-left: 2px solid #FC5D42;
  overflow: hidden;
  animation: textRevealAnim 2s ease 0.5s forwards,
    borderOpacityAnim 2s ease 0.5s forwards;
}

.textReveal > div > div {
  transform: translateX(-100%);
  animation: textRevealAnim 2s ease 0.5s forwards;
}

@keyframes textRevealAnim {
  to {
    transform: translateX(0);
  }
}

@keyframes borderOpacityAnim {
  50% {
    border-left: 2px solid red;
  }
  100% {
    border-left: 2px solid transparent;
  }
}

.textReveal.x50 {
  transform: translateX(-50%);
}

.textReveal.x100 {
  transform: translateX(-100%);
}

.textReveal.zoom > div {
  transform: translateX(100%) scale(0.5, 0.5);
}

.textReveal.rotateY {
  perspective: 100px;
}

.textReveal.rotateY > div {
  transform: translateX(100%) rotateY(20deg);
}

.textReveal.color > div > div {
  background: linear-gradient(
    to right,
    red,
    red 45%,
    orange 45%,
    orange 55%,
    red 55%,
    red
  );
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  background-size: 300%;
  animation: textRevealAnim 2s ease 0.5s forwards,
    bgShiftAnim 3s ease 0.5s forwards;
}

@keyframes bgShiftAnim {
  to {
    background-position: 100%;
  }
}

.container-animation {
  padding: 100px 20px 0;
  max-width: 100%;
  margin: 0 auto;
  margin-left: 100px;
}

.small-description {
  font-size: 30px !important;
}

.text-animation {
  margin: 0;
  text-align: left;
  font-size: 50px;
  overflow: hidden;
  line-height: 2;
}

.text-animation span {
  display: block;
  animation: reveal 1.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s;
}

@keyframes reveal {
  0% {
    transform: translate(0,100%);
  }
  100% {
    transform: translate(0,0);
  }
}

/* ripple effect */
.pinkBg {
  background-color: #ed184f!important;
  background-image: linear-gradient(90deg, #FC5D42, #fd8b55);
}
.intro-banner-vdo-play-btn{
  height:60px;
  width:60px;
  position:absolute;
  top:50%;
  left:50%;
  text-align:center;
  margin:-30px 0 0 -30px;
  border-radius:100px;
  z-index:1
}
.intro-banner-vdo-play-btn i{
  line-height:56px;
  font-size:30px
}
.intro-banner-vdo-play-btn .ripple{
  position:absolute;
  width:160px;
  height:160px;
  z-index:-1;
  left:50%;
  top:50%;
  opacity:0;
  margin:-80px 0 0 -80px;
  border-radius:100px;
  -webkit-animation:ripple 1.8s infinite;
  animation:ripple 4s infinite
}

@-webkit-keyframes ripple{
  0%{
      opacity:1;
      -webkit-transform:scale(0);
      transform:scale(0)
  }
  100%{
      opacity:0;
      -webkit-transform:scale(1);
      transform:scale(1)
  }
}
@keyframes ripple{
  0%{
      opacity:1;
      -webkit-transform:scale(0);
      transform:scale(0)
  }
  100%{
      opacity:0;
      -webkit-transform:scale(1);
      transform:scale(1)
  }
}
.intro-banner-vdo-play-btn .ripple:nth-child(2){
  animation-delay:.3s;
  -webkit-animation-delay:.3s
}
.intro-banner-vdo-play-btn .ripple:nth-child(3){
  animation-delay:.6s;
  -webkit-animation-delay:.6s
}

/* collapse paragraph */
#summary {
  font-size: 14px;
  line-height: 1.5;
}

#summary p.collapse:not(.show) {
    height: 3rem;
    overflow: hidden;
    display: block;
}

#summary p.collapsing {
    min-height: 3rem;
}

#summary a.collapsed::after  {
    content: '+ Show More';
}

#summary a:not(.collapsed)::after {
    content: '- Show Less';
}

/* end of collapsible summary */

